addded sidebar link href

--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -40,19 +40,19 @@
   </div>
   <div class="dropdown" id="dropdown">
     <ul class="dropdown-navbar-links">
-      <li class="nav-link tac">
+      <li routerLink="/" class="nav-link tac">
         <a href="#">Home</a>
       </li>
-      <li class="nav-link tac">
+      <li routerLink="/speakers" class="nav-link tac">
         <a href="#">Speakers</a>
       </li>
-      <li class="nav-link tac">
+      <li routerLink="/call-for-paper" class="nav-link tac">
         <a href="#">Call for Papers</a>
       </li>
-      <li class="nav-link tac">
+      <li routerLink="/paper-submission" class="nav-link tac">
         <a href="#">Paper Submission</a>
       </li>
-      <li class="nav-link tac">
+      <li routerLink="/registration" class="nav-link tac">
         <a href="#">Registration</a>
       </li>
       <li class="nav-link tac">
