--- a/src/app/pages/registration/registration.component.html
+++ b/src/app/pages/registration/registration.component.html
@@ -1,5 +1,70 @@
 <div class="registration">
   <h2 class="yellow bold tac">Registration Fees</h2>
 
-  <table></table>
+  <table>
+    <tr>
+      <th rowspan="3" colspan="3">Category</th>
+      <th colspan="4">Registration Fees</th>
+    </tr>
+    <tr>
+      <th colspan="2">National</th>
+      <th colspan="2">International</th>
+    </tr>
+    <tr>
+      <th>IEEE Members</th>
+      <th>Non Members</th>
+      <th>IEEE Members</th>
+      <th>Non Members</th>
+    </tr>
+    <tr>
+      <th colspan="2" rowspan="4">Author</th>
+    </tr>
+    <tr>
+      <td>Student/Research Scholar (Full Time)</td>
+      <td>6,000/-</td>
+      <td>7,000/-</td>
+      <td>300 USD</td>
+      <td>400 USD</td>
+    </tr>
+    <tr>
+      <td>Academician</td>
+      <td>7,000/-</td>
+      <td>8,000/-</td>
+      <td>400 USD</td>
+      <td>500 USD</td>
+    </tr>
+    <tr>
+      <td>Industry</td>
+      <td>8,000/-</td>
+      <td>9,000/-</td>
+      <td>400 USD</td>
+      <td>500 USD</td>
+    </tr>
+    <tr>
+      <th colspan="2" rowspan="4">Delegate</th>
+    </tr>
+    <tr>
+      <td>Student/Research Scholar (Full Time)</td>
+      <td>1,500/-</td>
+      <td>2,000/-</td>
+      <td>100 USD</td>
+      <td>150 USD</td>
+    </tr>
+    <tr>
+      <td>Academician</td>
+      <td>2,000/-</td>
+      <td>2,500/-</td>
+      <td>150 USD</td>
+      <td>200 USD</td>
+    </tr>
+    <tr>
+      <td>Industry</td>
+      <td>2,000/-</td>
+      <td>2,500/-</td>
+      <td>150 USD</td>
+      <td>200 USD</td>
+    </tr>
+  </table>
 </div>
+
+<!--  -->
