--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -16,10 +16,10 @@
       <a href="#">Registration</a>
     </li>
     <li class="nav-link tac date"><h5>2023</h5></li>
-    <li class="nav-link tac">
+    <li routerLink="/venue" class="nav-link tac">
       <a href="#">Venue</a>
     </li>
-    <li class="nav-link tac">
+    <li routerLink="/committees" class="nav-link tac">
       <a href="#">Committees</a>
     </li>
     <li class="nav-link tac">
@@ -55,10 +55,10 @@
       <li routerLink="/registration" class="nav-link tac">
         <a href="#">Registration</a>
       </li>
-      <li class="nav-link tac">
+      <li routerLink="/venue" class="nav-link tac">
         <a href="#">Venue</a>
       </li>
-      <li class="nav-link tac">
+      <li routerLink="/committees" class="nav-link tac">
         <a href="#">Committees</a>
       </li>
       <li class="nav-link tac">
