--- a/src/app/pages/committees/committees.component.html
+++ b/src/app/pages/committees/committees.component.html
@@ -154,8 +154,10 @@
     Chair <br />
     <span class="yellow">Dr. S. K. Garg</span>, Delhi Technical University,
     Delhi, India
+
+    <br /><br />
   </p>
-  <p class="bold m0">Members</p>
+  <p class="bold m0">Members <br /><br /></p>
   <p class="m0">
     Dr. Chi-Ling Pan, Chaoyang University of Technology, Taiwan
     <br />
@@ -630,6 +632,8 @@
     Dr. Bishan Chauhan, PMP, MothersonSumi Infotech and Design, Noida,India
     <br />
     Dr. D. S. Bhilade, DAVV University Indore, India
+
+    <br /><br />
   </p>
 
   <div class="hr"></div>
@@ -638,6 +642,8 @@
     Dr. Ashok K. Chauhan,<br />
     Founder President, Ritnand Balved Education Foundation (RBEF)<br />
     Chairman, A K C Group of Companies
+
+    <br /><br />
   </p>
 
   <div class="hr"></div>
@@ -647,6 +653,8 @@
     Chancellor, Amity University Uttar Pradesh, Noida, India <br />
     President, Ritnand Balved Education Foundation (RBEF) <br />
     CEO, A K C Group of Companies
+
+    <br /><br />
   </p>
 
   <div class="hr"></div>
@@ -654,6 +662,8 @@
   <p class="m0">
     Dr. (Mrs.) Balvinder Shukla, <br />
     Vice Chancellor, Amity University Uttar Pradesh, Noida, India
+
+    <br /><br />
   </p>
 
   <div class="hr"></div>
@@ -663,6 +673,8 @@
     Joint Head ASET, Director DICET, Amity School of Engineering & Technology
     <br />
     Amity University Uttar Pradesh, Noida, India
+
+    <br /><br />
   </p>
 
   <div class="hr"></div>
@@ -671,11 +683,15 @@
     Dr. Abhishek Singhal, <br />
     Associate Professor, Amity School of Engineering & Technology <br />
     Amity University Uttar Pradesh, Noida, India
+
+    <br /><br />
   </p>
   <p class="m0">
     Dr. Garima Aggarwal, <br />
     Associate Professor, Amity School of Engineering & Technology <br />
     Amity University Uttar Pradesh, Noida, India
+
+    <br /><br />
   </p>
 
   <div class="hr"></div>
@@ -684,31 +700,43 @@
     Dr. Abhishek Singhal, <br />
     Associate Professor, Amity School of Engineering & Technology <br />
     Amity University Uttar Pradesh, Noida, India
+
+    <br /><br />
   </p>
   <p class="m0">
     Dr. Garima Aggarwal, <br />
     Associate Professor, Amity School of Engineering & Technology <br />
     Amity University Uttar Pradesh, Noida, India
+
+    <br /><br />
   </p>
   <p class="m0">
     Dr. Madhulika, <br />
     Associate Professor, Amity School of Engineering & Technology <br />
     Amity University Uttar Pradesh, Noida, India
+
+    <br /><br />
   </p>
   <p class="m0">
     Dr. Misha Kakkar, <br />
     Assistant Professor, Amity School of Engineering & Technology <br />
     Amity University Uttar Pradesh, Noida, India
+
+    <br /><br />
   </p>
   <p class="m0">
     Dr. Sumit Kumar, <br />
     Associate Professor, Amity School of Engineering & Technology <br />
     Amity University Uttar Pradesh, Noida, India
+
+    <br /><br />
   </p>
   <p class="m0">
     Dr. Subhash Chand Gupta, <br />
     Associate Professor, Amity School of Engineering & Technology <br />
     Amity University Uttar Pradesh, Noida, India
+
+    <br /><br />
   </p>
 
   <div class="hr"></div>
@@ -717,6 +745,8 @@
     Dr. Sumita Gupta, <br />
     Assistant Professor, Amity School of Engineering & Technology <br />
     Amity University Uttar Pradesh, Noida, India
+
+    <br /><br />
   </p>
 
   <div class="hr"></div>
@@ -725,16 +755,22 @@
     Dr.Soumya Ranjan Nayak, <br />
     Assistant Professor, Amity School of Engineering & Technology <br />
     Amity University Uttar Pradesh, Noida, India
+
+    <br /><br />
   </p>
   <p class="m0">
     Dr. Rajni Sehgal, <br />
     Associate Professor, Amity School of Engineering & Technology <br />
     Amity University Uttar Pradesh, Noida, India
+
+    <br /><br />
   </p>
   <p class="m0">
     Dr. Sumita Gupta, <br />
     Assistant Professor, Amity School of Engineering & Technology <br />
     Amity University Uttar Pradesh, Noida, India
+
+    <br /><br />
   </p>
 
   <div class="hr"></div>
@@ -742,18 +778,24 @@
   <p class="m0">
     Dr. Krishna Kant Singh, Professor, Amity School of Engineering & Technology
     Amity University Uttar Pradesh, Noida, India
+
+    <br /><br />
   </p>
   <p class="m0">
     Dr. Manoj Kumar Shukla,
     <br />
     Associate Professor, <br />Amity School of Engineering & Technology Amity
     University Uttar Pradesh, Noida, India
+
+    <br /><br />
   </p>
   <p class="m0">
     Mr. Soumya Ranjan Nayak,
     <br />
     Assistant Professor, <br />Amity School of Engineering & Technology Amity
     University Uttar Pradesh, Noida, India
+
+    <br /><br />
   </p>
   <p class="m0">
     Ms. Neetu Narayan,
@@ -761,12 +803,16 @@
     Assistant Professor, <br />
     Amity School of Engineering & Technology Amity University Uttar Pradesh,
     Noida, India
+
+    <br /><br />
   </p>
   <p class="m0">
     Dr. Neha Agarwal,
     <br />
     Assistant Professor, <br />Amity School of Engineering & Technology Amity
     University Uttar Pradesh, Noida, India
+
+    <br /><br />
   </p>
   <p class="m0">
     Dr. Achyut Shankar,
@@ -774,6 +820,8 @@
     Assistant Professor, <br />
     Amity School of Engineering & Technology Amity University Uttar Pradesh,
     Noida, India
+
+    <br /><br />
   </p>
 
   <div class="hr"></div>
@@ -783,5 +831,459 @@
     Dy. Director (Placement & Industry Relation), Amity School of Engineering &
     Technology <br />
     Amity University Uttar Pradesh, Noida, India
+
+    <br /><br />
+  </p>
+
+  <div class="hr"></div>
+  <h2 class="tac yellow bold">Industry Connect Committee Co Chair</h2>
+  <p>
+    <span class="yellow">Dr. Gopa Das Gupta</span>, <br />
+    DGM-CRC, Amity School of Engineering & Technology <br />
+    Amity University Uttar Pradesh, Noida, India
+
+    <br /><br />
+  </p>
+  <p class="bold m0">Member <br /><br /></p>
+  <p class="m0">
+    Ms. Anju Khanna, <br />
+    Asst. Manager, CRC, Amity School of Engineering & Technology <br />
+    Amity University Uttar Pradesh, Noida, India
+
+    <br /><br />
+  </p>
+  <p class="m0">
+    Ms. Priyanka Singh, <br />
+    Deputy Manager, CRC, Amity School of Engineering & Technology <br />
+    Amity University Uttar Pradesh, Noida, India
+
+    <br /><br />
+  </p>
+  <p class="m0">
+    Mr. Alok Kumar Tiwari, <br />
+    Sr. Manager, CRC, Amity School of Engineering & Technology <br />
+    Amity University Uttar Pradesh, Noida, India
+
+    <br /><br />
+  </p>
+
+  <div class="hr"></div>
+  <h2 class="bold yellow">Financial Affairs Committee Chair</h2>
+  <p class="m0">
+    Dr. Misha Kakkar, <br />
+    Assistant Professor, Amity School of Engineering & Technology <br />
+    Amity University Uttar Pradesh, Noida, India
+
+    <br /><br />
+  </p>
+  <p class="m0">
+    Dr. Shuchi Mala, <br />
+    Assistant Professor, Amity School of Engineering & Technology <br />
+    Amity University Uttar Pradesh, Noida, India
+
+    <br /><br />
+  </p>
+
+  <div class="hr"></div>
+  <h2 class="bold yellow">Registration Committee Chair</h2>
+  <p class="m0">
+    Ms. Seema Sharma, <br />
+    Assistant Professor, Amity School of Engineering & Technology <br />
+    Amity University Uttar Pradesh, Noida, India
+
+    <br /><br />
+  </p>
+  <p class="m0">
+    Ms. Smriti Sehgal, <br />
+    Assistant Professor, Amity School of Engineering & Technology <br />
+    Amity University Uttar Pradesh, Noida, India
+
+    <br /><br />
+  </p>
+
+  <div class="hr"></div>
+  <h2 class="bold yellow">Local Management Committee Chair</h2>
+  <p class="m0">
+    Dr. Bhupendra Singh, <br />
+    Assistant Professor, Amity School of Engineering & Technology <br />
+    Amity University Uttar Pradesh, Noida, India
+
+    <br /><br />
+  </p>
+  <p class="m0">
+    Mr. Paurush Bhulania, <br />
+    Assistant Professor, Amity School of Engineering & Technology <br />
+    Amity University Uttar Pradesh, Noida, India
+
+    <br /><br />
+  </p>
+
+  <div class="hr"></div>
+  <h2 class="bold yellow">Event Management Committee Chair</h2>
+  <p class="0">
+    Dr. Vasudha Vashisht, <br />
+    Associate Professor, Amity School of Engineering & Technology <br />
+    Amity University Uttar Pradesh, Noida, India
+
+    <br /><br />
+  </p>
+
+  <div class="hr"></div>
+  <h2 class="bold yellow">Sponsorship Committee Co Chair</h2>
+  <p class="m0">
+    Dr. Vibha Nehra, <br />
+    Assistant Professor, Amity School of Engineering & Technology <br />
+    Amity University Uttar Pradesh, Noida, India
+
+    <br /><br />
+  </p>
+  <p class="m0">
+    Dr. Dolly Sharma, <br />
+    Assistant Professor, Amity School of Engineering & Technology <br />
+    Amity University Uttar Pradesh, Noida, India
+
+    <br /><br />
+  </p>
+
+  <div class="hr"></div>
+  <h2 class="bold yellow">Delegate Committee Chair</h2>
+  <p class="m0">
+    Dr. Sunil Kumar, <br />
+    Associate Professor, Amity School of Engineering & Technology <br />
+    Amity University Uttar Pradesh, Noida, India
+
+    <br /><br />
+  </p>
+
+  <div class="hr"></div>
+  <h2 class="bold yellow">Technical Sessions Committee Chair</h2>
+  <p class="m0">
+    Dr. Vibha Nehra, <br />
+    Assistant Professor, Amity School of Engineering & Technology <br />
+    Amity University Uttar Pradesh, Noida, India
+
+    <br /><br />
+  </p>
+  <p class="m0">
+    Dr. Sumita Gupta, <br />
+    Assistant Professor, Amity School of Engineering & Technology <br />
+    Amity University Uttar Pradesh, Noida, India
+
+    <br /><br />
+  </p>
+  <p class="bold m0">Members <br /><br /></p>
+  <p class="m0">
+    Dr. Anshul Tickoo, <br />
+    Associate Professor, Amity School of Engineering & Technology <br />
+    Amity University Uttar Pradesh, Noida, India
+
+    <br /><br />
+  </p>
+  <p class="m0">
+    Dr. Richa Gupta, <br />
+    Assistant Professor, Amity School of Engineering & Technology <br />
+    Amity University Uttar Pradesh, Noida, India
+
+    <br /><br />
+  </p>
+  <p class="m0">
+    Dr. Rashmi Bhel, <br />
+    Assistant Professor, Amity School of Engineering & Technology <br />
+    Amity University Uttar Pradesh, Noida, India
+
+    <br /><br />
+  </p>
+  <p class="m0">
+    Dr. Leena Singh, <br />
+    Assistant Professor, Amity School of Engineering & Technology <br />
+    Amity University Uttar Pradesh, Noida, India
+
+    <br /><br />
+  </p>
+  <p class="m0">
+    Dr. Shipra Shukla, <br />
+    Assistant Professor, Amity School of Engineering & Technology <br />
+    Amity University Uttar Pradesh, Noida, India
+
+    <br /><br />
+  </p>
+  <p class="m0">
+    Dr. Ram Paul, <br />
+    Assistant Professor, Amity School of Engineering & Technology <br />
+    Amity University Uttar Pradesh, Noida, India
+
+    <br /><br />
+  </p>
+  <p class="m0">
+    Dr. Juhi Singh, <br />
+    Assistant Professor, Amity School of Engineering & Technology <br />
+    Amity University Uttar Pradesh, Noida, India
+
+    <br /><br />
+  </p>
+  <p class="m0">
+    Dr. Aakankshi Gupta, <br />
+    Assistant Professor, Amity School of Engineering & Technology <br />
+    Amity University Uttar Pradesh, Noida, India
+
+    <br /><br />
+  </p>
+  <p class="m0">
+    Dr. Ashok Kumar Yadav, <br />
+    Assistant Professor, Amity School of Engineering & Technology <br />
+    Amity University Uttar Pradesh, Noida, India
+
+    <br /><br />
+  </p>
+  <p class="m0">
+    Mr. Anant Kumar Jaiswal, <br />
+    Assistant Professor, Amity School of Engineering & Technology <br />
+    Amity University Uttar Pradesh, Noida, India
+
+    <br /><br />
+  </p>
+  <p class="m0">
+    Ms. Swati Singhal, <br />
+    Assistant Professor, Amity School of Engineering & Technology <br />
+    Amity University Uttar Pradesh, Noida, India
+
+    <br /><br />
+  </p>
+  <p class="m0">
+    Mr. Deepak Gaur, <br />
+    Assistant Professor, Amity School of Engineering & Technology <br />
+    Amity University Uttar Pradesh, Noida, India
+
+    <br /><br />
+  </p>
+  <p class="m0">
+    Mr. Roshan Lal, <br />
+    Assistant Professor, Amity School of Engineering & Technology <br />
+    Amity University Uttar Pradesh, Noida, India,
+
+    <br /><br />
+  </p>
+
+  <div class="hr"></div>
+  <h2 class="bold yellow">Media Managment Committee</h2>
+  <p class="m0">
+    Ms. Smriti Sehgal, <br />
+    Assistant Professor, Amity School of Engineering & Technology <br />
+    Amity University Uttar Pradesh, Noida, India
+
+    <br /><br />
+  </p>
+  <p class="m0">
+    Ms. Shweta Bhardwaj, <br />
+    Assistant Professor, Amity School of Engineering & Technology <br />
+    Amity University Uttar Pradesh, Noida, India
+
+    <br /><br />
+  </p>
+
+  <div class="hr"></div>
+  <h2 class="bold yellow">Website Management Committee</h2>
+  <p class="m0">
+    Dr. Subhash Chand Gupta, <br />
+    Associate Professor, Amity School of Engineering & Technology <br />
+    Amity University Uttar Pradesh, Noida, India
+
+    <br /><br />
+  </p>
+  <p class="m0">
+    Ms. Nidhi Chandra, <br />
+    Assistant Professor, Amity School of Engineering & Technology <br />
+    Amity University Uttar Pradesh, Noida, India
+
+    <br /><br />
+  </p>
+
+  <div class="hr"></div>
+  <h2 class="bold yellow">Publicity Committee Chair</h2>
+  <p class="m0">
+    Prof. (Dr.) S.N. Singh, <br />
+    Professor, Amity School of Engineering & Technology <br />
+    Amity University Uttar Pradesh, Noida, India
+
+    <br /><br />
+  </p>
+  <p class="m0">
+    Prof. (Dr.) Tanya Singh, <br />
+    Professor, Amity School of Engineering & Technology <br />
+    Amity University Uttar Pradesh, Noida, India
+
+    <br /><br />
+  </p>
+  <p class="m0">
+    Dr. Sanjay Kumar Dubey, <br />
+    Associate Professor, Amity School of Engineering & Technology <br />
+    Amity University Uttar Pradesh, Noida, India
+
+    <br /><br />
+  </p>
+  <p class="m0">
+    Dr. Rakesh Garg, <br />
+    Associate Professor, Amity School of Engineering & Technology <br />
+    Amity University Uttar Pradesh, Noida, India
+
+    <br /><br />
+  </p>
+
+  <div class="hr"></div>
+  <h2 class="bold yellow">Publication Committee Co Chair</h2>
+  <p class="m0">
+    <span class="yellow">Prof. (Dr.) M. Parthasarthy</span>, <br />
+    Professor, Amity School of Engineering & Technology <br />
+    Amity University Uttar Pradesh, Noida, India
+
+    <br /><br />
+  </p>
+  <p class="m0">
+    <span class="yellow">Mr. Anant Kumar Jaiswal</span>, <br />
+    Assistant Professor, Amity School of Engineering & Technology <br />
+    Amity University Uttar Pradesh, Noida, India
+
+    <br /><br />
+  </p>
+
+  <p class="bold m0">Members <br /><br /></p>
+  <p class="m0">
+    Dr. Krishna Kant Singh, <br />
+    Professor, Amity School of Engineering & Technology <br />
+    Amity University Uttar Pradesh, Noida, India
+
+    <br /><br />
+  </p>
+  <p class="m0">
+    Dr. Geetika, <br />
+    Associate Professor, Amity School of Engineering & Technology <br />
+    Amity University Uttar Pradesh, Noida, India
+
+    <br /><br />
+  </p>
+  <p class="m0">
+    Dr. Supriya Raheja, <br />
+    Associate Professor, Amity School of Engineering & Technology <br />
+    Amity University Uttar Pradesh, Noida, India
+
+    <br /><br />
+  </p>
+  <p class="m0">
+    Dr. Rashmi Bhel, <br />
+    Assistant Professor, Amity School of Engineering & Technology <br />
+    Amity University Uttar Pradesh, Noida, India
+
+    <br /><br />
+  </p>
+  <p class="m0">
+    Dr. Leena Singh, <br />
+    Assistant Professor, Amity School of Engineering & Technology <br />
+    Amity University Uttar Pradesh, Noida, India
+
+    <br /><br />
+  </p>
+  <p class="m0">
+    Dr. Ram Paul, <br />
+    Assistant Professor, Amity School of Engineering & Technology <br />
+    Amity University Uttar Pradesh, Noida, India
+
+    <br /><br />
+  </p>
+  <p class="m0">
+    Dr. Juhi Singh, <br />
+    Assistant Professor, Amity School of Engineering & Technology <br />
+    Amity University Uttar Pradesh, Noida, India
+
+    <br /><br />
+  </p>
+  <p class="m0">
+    Dr. Aakankshi Gupta, <br />
+    Assistant Professor, Amity School of Engineering & Technology <br />
+    Amity University Uttar Pradesh, Noida, India
+
+    <br /><br />
+  </p>
+  <p class="m0">
+    Mr. Nirbhay Kashyap, <br />
+    Assistant Professor, Amity School of Engineering & Technology <br />
+    Amity University Uttar Pradesh, Noida, India
+
+    <br /><br />
+  </p>
+  <p class="m0">
+    Mr. Kunal Gupta, <br />
+    Assistant Professor, Amity School of Engineering & Technology <br />
+    Amity University Uttar Pradesh, Noida, India
+
+    <br /><br />
+  </p>
+  <p class="m0">
+    Mr. Sanjeev Kumar Tomar, <br />
+    Assistant Professor, Amity School of Engineering & Technology <br />
+    Amity University Uttar Pradesh, Noida, India
+
+    <br /><br />
+  </p>
+  <p class="m0">
+    Dr. Ashok Kumar Yadav, <br />
+    Assistant Professor, Amity School of Engineering & Technology <br />
+    Amity University Uttar Pradesh, Noida, India
+
+    <br /><br />
+  </p>
+  <p class="m0">
+    Dr. Nidhi Mishra, <br />
+    Assistant Professor, Amity School of Engineering & Technology <br />
+    Amity University Uttar Pradesh, Noida, India
+
+    <br /><br />
+  </p>
+  <p class="m0">
+    Dr. Juhi Jain, <br />
+    Assistant Professor, Amity School of Engineering & Technology <br />
+    Amity University Uttar Pradesh, Noida, India
+
+    <br /><br />
+  </p>
+
+  <div class="hr"></div>
+  <h2 class="bold yellow">Hospitality Committee Chair</h2>
+  <p class="m0">
+    Mr. Sanjeev Kumar Tomar, <br />
+    Assistant Professor, Amity School of Engineering & Technology <br />
+    Amity University Uttar Pradesh, Noida, India
+
+    <br /><br />
+  </p>
+
+  <div class="hr"></div>
+  <h2 class="bold yellow">Hospitality Committee Co Chair</h2>
+  <p class="m0">
+    Mr. Deepak Gaur, <br />
+    Assistant Professor, Amity School of Engineering & Technology <br />
+    Amity University Uttar Pradesh, Noida, India
+
+    <br /><br />
+  </p>
+  <p class="m0">
+    Mr. Roshan Lal, <br />
+    Assistant Professor, Amity School of Engineering & Technology <br />
+    Amity University Uttar Pradesh, Noida, India
+
+    <br /><br />
+  </p>
+  <p class="m0">
+    Mr. Kunal Gupta, <br />
+    Assistant Professor, Amity School of Engineering & Technology <br />
+    Amity University Uttar Pradesh, Noida, India
+
+    <br /><br />
+  </p>
+  <p class="m0">
+    Dr. Ram Paul, <br />
+    Assistant Professor, Amity School of Engineering & Technology <br />
+    Amity University Uttar Pradesh, Noida, India
+
+    <br /><br />
   </p>
 </div>
