--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -24,7 +24,7 @@
     z-index: -1;
     width: 100%;
     height: 100vh;
-    background: url("../../../assets/map.svg");
+    background: url("../../../assets/mapAlt.svg");
     opacity: 0.2;
     background-size: contain;
     background-position: center;
