added minor change

--- a/src/app/pages/sponsorship/sponsorship.component.html
+++ b/src/app/pages/sponsorship/sponsorship.component.html
@@ -31,7 +31,7 @@
       </ul>
     </div>
     <div class="six columns">
-      <h3 class="yellow">Why become a benefactor?</h3>
+      <h3 class="bold yellow">Why become a benefactor?</h3>
       <ul class="taj">
         <li>
           Confluence-2023, is an international event to present the latest
@@ -180,7 +180,7 @@
           event. All additions shall be charged appropriately.
         </li>
         <li>
-          Bromide of Company’s Logo & complete Name of the Company with style
+          Bromide of Company's Logo & complete Name of the Company with style
           will be required for acknowledging through Backdrops, Banners,
           brochures, stationary, Invitation cards & other promotional material.
         </li>
