made tables responsive

--- a/src/app/pages/sponsorship/sponsorship.component.html
+++ b/src/app/pages/sponsorship/sponsorship.component.html
@@ -51,101 +51,103 @@
     </div>
   </div>
 
-  <table>
-    <tr>
-      <td></td>
-      <td>Platinum</td>
-      <td>Gold</td>
-      <td>Silver</td>
-      <td>Bronze</td>
-    </tr>
-    <tr>
-      <td>
-        Banner of your company logo and benefactor level in the foyer area of
-        the conference venue
-      </td>
-      <td>🗹</td>
-      <td>🗹</td>
-      <td>🗹</td>
-      <td>🗹</td>
-    </tr>
-    <tr>
-      <td>
-        Keynote speech during conference (subject to approval by organizing
-        committee)
-      </td>
-      <td>🗹</td>
-      <td>🗷</td>
-      <td>🗷</td>
-      <td>🗷</td>
-    </tr>
-    <tr>
-      <td>
-        Acknowledgement by the chairman during Welcome Reception, Opening and
-        Banquet
-      </td>
-      <td>Welcome, Valedictory</td>
-      <td>Welcome, Valedictory</td>
-      <td>🗷</td>
-      <td>🗷</td>
-    </tr>
-    <tr>
-      <td>Full conference registrations and access to social events (#)</td>
-      <td>5</td>
-      <td>3</td>
-      <td>2</td>
-      <td>1</td>
-    </tr>
-    <tr>
-      <td>Advertisement in the Final Program (full / half page)</td>
-      <td>Full Page</td>
-      <td>Full Page</td>
-      <td>Half Page</td>
-      <td>One Fourth</td>
-    </tr>
-    <tr>
-      <td>Complimentary exhibition booths (6 x 3 feet)</td>
-      <td>Double Size</td>
-      <td>Single Size</td>
-      <td>Single Size</td>
-      <td>Single Size</td>
-    </tr>
-    <tr>
-      <td>Listed on conference website.</td>
-      <td>🗹</td>
-      <td>🗹</td>
-      <td>🗷</td>
-      <td>🗷</td>
-    </tr>
-    <tr>
-      <td>Your company's logo</td>
-      <td>🗹</td>
-      <td>🗹</td>
-      <td>🗹</td>
-      <td>🗹</td>
-    </tr>
-    <tr>
-      <td>Paragraph about the company/organization (up to # words)</td>
-      <td>375</td>
-      <td>375</td>
-      <td>250</td>
-      <td>125</td>
-    </tr>
-    <tr>
-      <td>Company/organization website URL</td>
-      <td>🗹</td>
-      <td>🗹</td>
-      <td>🗹</td>
-      <td>🗹</td>
-    </tr>
-    <tr>
-      <td>Available up to</td>
-      <td>2</td>
-      <td>5</td>
-      <td>8</td>
-      <td>10</td>
-    </tr>
-  </table>
+  <div class="resp-table">
+    <table>
+      <tr>
+        <td></td>
+        <td>Platinum</td>
+        <td>Gold</td>
+        <td>Silver</td>
+        <td>Bronze</td>
+      </tr>
+      <tr>
+        <td>
+          Banner of your company logo and benefactor level in the foyer area of
+          the conference venue
+        </td>
+        <td>🗹</td>
+        <td>🗹</td>
+        <td>🗹</td>
+        <td>🗹</td>
+      </tr>
+      <tr>
+        <td>
+          Keynote speech during conference (subject to approval by organizing
+          committee)
+        </td>
+        <td>🗹</td>
+        <td>🗷</td>
+        <td>🗷</td>
+        <td>🗷</td>
+      </tr>
+      <tr>
+        <td>
+          Acknowledgement by the chairman during Welcome Reception, Opening and
+          Banquet
+        </td>
+        <td>Welcome, Valedictory</td>
+        <td>Welcome, Valedictory</td>
+        <td>🗷</td>
+        <td>🗷</td>
+      </tr>
+      <tr>
+        <td>Full conference registrations and access to social events (#)</td>
+        <td>5</td>
+        <td>3</td>
+        <td>2</td>
+        <td>1</td>
+      </tr>
+      <tr>
+        <td>Advertisement in the Final Program (full / half page)</td>
+        <td>Full Page</td>
+        <td>Full Page</td>
+        <td>Half Page</td>
+        <td>One Fourth</td>
+      </tr>
+      <tr>
+        <td>Complimentary exhibition booths (6 x 3 feet)</td>
+        <td>Double Size</td>
+        <td>Single Size</td>
+        <td>Single Size</td>
+        <td>Single Size</td>
+      </tr>
+      <tr>
+        <td>Listed on conference website.</td>
+        <td>🗹</td>
+        <td>🗹</td>
+        <td>🗷</td>
+        <td>🗷</td>
+      </tr>
+      <tr>
+        <td>Your company's logo</td>
+        <td>🗹</td>
+        <td>🗹</td>
+        <td>🗹</td>
+        <td>🗹</td>
+      </tr>
+      <tr>
+        <td>Paragraph about the company/organization (up to # words)</td>
+        <td>375</td>
+        <td>375</td>
+        <td>250</td>
+        <td>125</td>
+      </tr>
+      <tr>
+        <td>Company/organization website URL</td>
+        <td>🗹</td>
+        <td>🗹</td>
+        <td>🗹</td>
+        <td>🗹</td>
+      </tr>
+      <tr>
+        <td>Available up to</td>
+        <td>2</td>
+        <td>5</td>
+        <td>8</td>
+        <td>10</td>
+      </tr>
+    </table>
+  </div>
 
   <div class="row">
     <div class="six columns">
